--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -6,15 +6,15 @@
 }
 
 .grid__item {
-    background-color: rgba(255, 255, 255, 0.7);;
     border-radius: 3px;
     padding: 8px;
     width: 100%;
+    height: 100%;
     transition: 0.5s;
 }
 
 .grid__item > * {
-    padding: .5rem;
+    padding: 8px;
 }
 
 @media (hover: hover) {
