--- a/src/components/pages/ArticleSection/variables-light.css
+++ b/src/components/pages/ArticleSection/variables-light.css
@@ -1,4 +1,4 @@
-@import '../../global-variables.css';
+@import '../../../global-variables.css';
 
 .article {
     --main-article-info--font: var(--smoky-black);
